--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,28 @@
 @import "~antd/dist/antd.css";
+
+/* ---------- Footer ---------- */
+.footer {
+  position: absolute;
+  bottom: 0px;
+  background-color: brown;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.footer-social-media-div {
+  margin: 10px;
+  position: absolute;
+  right: 0px;
+}
+
+.footer-img-anlogo {
+  width: 100px;
+  margin: 15px;
+}
+
+.footer-icon {
+  margin: 5px;
+  font-size: 50px;
+  color: aliceblue;
+}
