--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,43 @@
 @import "~antd/dist/antd.css";
 
+/* ---------- Subscribe ---------- */
+.subscribe {
+  background-color: brown;
+  bottom: auto;
+  width: 100%;
+  height: auto;
+}
+
+.subscribe-div {
+  padding-top: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.subscribe-h1,
+.subscribe-span {
+  width: 100% !important;
+  display: flex;
+  justify-content: center;
+}
+
+.subscribe-form {
+  padding: 20px 100px;
+}
+
+.ant-form-item {
+  margin-bottom: 5px;
+}
+
+.subscribe-h3 {
+  margin: 3px 0px;
+}
+
+.subscribe-btn {
+  margin: 10px 0px;
+}
+
 /* ---------- Footer ---------- */
 .footer {
   position: absolute;
