--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 @import "~antd/dist/antd.css";
 
+/* ---------- App ---------- */
+
+.App {
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+}
+
 /* ---------- Header ---------- */
 .header {
   width: 100%;
@@ -9,14 +17,22 @@
   justify-content: space-between;
 }
 
-.header-social-media-div,
+.header-social-media-div {
+  padding: 15px 0px 15px 30px;
+}
+
 .header-menu-div {
-  padding: 15px 30px;
+  padding: 15px 30px 15px 50px;
+}
+
+.header-img-div {
+  display: flex;
+  justify-content: center;
 }
 
 .header-img-anlogo {
   width: 70px;
-  margin: 15px;
+  margin: 15px 0px 15px 0px;
 }
 
 .header-icon {
@@ -71,8 +87,71 @@
   padding: 0 10px;
 }
 
+/* ---------- Profiles ---------- */
+.profile-img {
+  height: 400px;
+  background-image: url("../src/assets/img/IMAGEN_1.1.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.profile-body {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  padding: 60px;
+}
+
+.profile-div {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 20px;
+}
+
+.profile-img-x {
+  width: 170px;
+  height: auto;
+  margin: 0px !important;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-h3,
+.profile-span-x {
+  display: flex;
+  justify-content: center !important;
+}
+
+.profile-span-x.roll {
+  /* padding: 0px 5px; */
+  text-align: justify !important;
+}
+
+.profile-span,
+.profile-h2 {
+  display: flex;
+  justify-content: center !important;
+  font-family: "Roboto", sans-serif;
+}
+
+.profile-h2 {
+  padding-top: 20px;
+  color: #4b8241;
+  font-weight: bold;
+}
+
+.profile-span {
+  color: #4d4d4d;
+  font-size: 15px;
+  font-weight: 400;
+  text-align: center;
+}
+
 /* ---------- Subscribe ---------- */
 .subscribe {
+  /* display: none; */
   background-color: #f6f6f6;
   bottom: auto;
   width: 100%;
@@ -86,7 +165,7 @@
   flex-direction: column;
 }
 
-.subscribe-h1,
+.subscribe-h2,
 .subscribe-span {
   font-family: "Roboto", sans-serif;
   width: 100% !important;
@@ -95,7 +174,7 @@
   color: #000;
 }
 
-.subscribe-h1 {
+.subscribe-h2 {
   font-weight: bold;
   font-size: 30px;
   margin-bottom: 1px;
@@ -123,7 +202,7 @@
 
 /* ---------- Footer ---------- */
 .footer {
-  position: absolute;
+  position: inherit;
   bottom: 0px;
   background-color: #1a1a1a;
   width: 100%;
