--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,38 @@
 .App {
   width: 100%;
   height: 100%;
-  /* overflow: hidden; */
+}
+
+/* ---------- About Us ---------- */
+
+.about-us {
+  width: 100%;
+  height: auto;
+  font-family: "Roboto", sans-serif;
+}
+
+.about-us-img {
+  height: 650px;
+  background-image: url("../src/assets/img/IMAGEN_1.1.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about-us-text {
+  padding: 50px;
+}
+
+.about-us-h2,
+.about-us-span {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.about-us-h2 {
+  font-weight: bold;
 }
 
 /* ---------- Header ---------- */
@@ -45,6 +76,10 @@
   width: 100%;
   display: flex;
   justify-content: flex-end;
+}
+
+.drawer-main {
+  margin-left: 20px;
 }
 
 .drawer-bottom {
@@ -88,44 +123,43 @@
 }
 
 /* ---------- Profiles ---------- */
-.profile-img {
-  height: 400px;
-  background-image: url("../src/assets/img/IMAGEN_1.1.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .profile-body {
   width: 100%;
-  height: 500px;
+  height: 530px;
   display: flex;
-  padding: 60px;
+  padding: 25px 200px;
 }
 
 .profile-div {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0px 20px;
+  margin: 0px 12px;
+}
+
+.profile-img-div {
+  height: 300px;
+}
+
+.profile-text-div {
+  height: 250px;
 }
 
 .profile-img-x {
-  width: 170px;
-  height: auto;
-  margin: 0px !important;
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .profile-h3,
 .profile-span-x {
+  margin-bottom: 0px;
+  padding-top: 5px;
   display: flex;
   justify-content: center !important;
 }
 
 .profile-span-x.roll {
-  /* padding: 0px 5px; */
   text-align: justify !important;
 }
 
@@ -137,7 +171,7 @@
 }
 
 .profile-h2 {
-  padding-top: 20px;
+  padding-top: 40px;
   color: #4b8241;
   font-weight: bold;
 }
