--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,12 @@
   width: 100%;
   height: auto;
   font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.about-us-img {
+.about-us-first-img {
   height: 650px;
   background-image: url("../src/assets/img/IMAGEN_1.1.png");
   background-attachment: fixed;
@@ -24,19 +27,109 @@
   background-size: cover;
 }
 
+.about-us-text-div {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.about-us-img-div {
+  padding-top: 70px;
+  width: 100%;
+  height: auto;
+  max-height: 700px;
+}
+
+.about-us-date-div {
+  width: 100%;
+  height: auto;
+  padding: 60px 50px 100px;
+}
+
+.about-us-flower {
+  width: 25vw;
+}
+
+.about-us-flower.right {
+  transform: rotate(180deg);
+}
+
+.about-us-img {
+  padding: 0px 22vw;
+  width: 100%;
+  height: auto;
+}
+
 .about-us-text {
-  padding: 50px;
+  position: relative;
+  padding: 100px 0px;
 }
 
 .about-us-h2,
 .about-us-span {
   display: flex;
   justify-content: center;
-  text-align: center;
+}
+
+.about-us-h2,
+.about-us-h4 {
+  font-weight: bold;
+  font-size: 2em;
+  color: #4b8241;
 }
 
 .about-us-h2 {
-  font-weight: bold;
+  margin-bottom: 60px;
+}
+
+.about-us-span {
+  font-size: 20px;
+  text-align: center;
+}
+
+.about-us-h4 {
+  padding: 60px 20vw 0px;
+}
+
+.about-us-ul {
+  list-style: none;
+  font-weight: 500;
+  padding: 0px 20vw;
+}
+
+.about-us-li {
+  width: 100%;
+  height: 60px;
+  border: solid #630164 0.5px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.about-us-span-date {
+  width: 10%;
+  height: 100%;
+  background-color: #630164;
+  color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-us-span-text {
+  width: 90%;
+  margin-left: 10px;
+  font-weight: 400;
+}
+
+.about-us-second-img {
+  height: 550px;
+  background-image: url("../src/assets/img/IMAGEN_1.3.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* ---------- Header ---------- */
@@ -174,6 +267,7 @@
   padding-top: 40px;
   color: #4b8241;
   font-weight: bold;
+  font-size: 2em;
 }
 
 .profile-span {
@@ -210,7 +304,7 @@
 
 .subscribe-h2 {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 2em;
   margin-bottom: 1px;
 }
 
