--- a/src/App.css
+++ b/src/App.css
@@ -7,131 +7,6 @@
   height: 100%;
 }
 
-/* ---------- About Us ---------- */
-
-.about-us {
-  width: 100%;
-  height: auto;
-  font-family: "Roboto", sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.about-us-first-img {
-  height: 650px;
-  background-image: url("../src/assets/img/IMAGEN_1.1.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.about-us-text-div {
-  width: 100%;
-  height: auto;
-  display: flex;
-}
-
-.about-us-img-div {
-  padding-top: 70px;
-  width: 100%;
-  height: auto;
-  max-height: 700px;
-}
-
-.about-us-date-div {
-  width: 100%;
-  height: auto;
-  padding: 60px 50px 100px;
-}
-
-.about-us-flower {
-  width: 25vw;
-}
-
-.about-us-flower.right {
-  transform: rotate(180deg);
-}
-
-.about-us-img {
-  padding: 0px 22vw;
-  width: 100%;
-  height: auto;
-}
-
-.about-us-text {
-  position: relative;
-  padding: 100px 0px;
-}
-
-.about-us-h2,
-.about-us-span {
-  display: flex;
-  justify-content: center;
-}
-
-.about-us-h2,
-.about-us-h4 {
-  font-weight: bold;
-  font-size: 2em;
-  color: #4b8241;
-}
-
-.about-us-h2 {
-  margin-bottom: 60px;
-}
-
-.about-us-span {
-  font-size: 20px;
-  text-align: center;
-}
-
-.about-us-h4 {
-  padding: 60px 20vw 0px;
-}
-
-.about-us-ul {
-  list-style: none;
-  font-weight: 500;
-  padding: 0px 20vw;
-}
-
-.about-us-li {
-  width: 100%;
-  height: 60px;
-  border: solid #630164 0.5px;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-}
-
-.about-us-span-date {
-  width: 10%;
-  height: 100%;
-  background-color: #630164;
-  color: #f6f6f6;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.about-us-span-text {
-  width: 90%;
-  margin-left: 10px;
-  font-weight: 400;
-}
-
-.about-us-second-img {
-  height: 550px;
-  background-image: url("../src/assets/img/IMAGEN_1.3.png");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 /* ---------- Header ---------- */
 .header {
   width: 100%;
@@ -215,6 +90,188 @@
   padding: 0 10px;
 }
 
+/* ---------- About Us ---------- */
+
+.about-us {
+  width: 100%;
+  height: auto;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-us-first-img {
+  height: 650px;
+  background-image: url("../src/assets/img/IMAGEN_1.1.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.about-us-text-div {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.about-us-img-div {
+  padding: 70px 0px 20px;
+  width: 100%;
+  height: auto;
+  max-height: 700px;
+}
+
+.about-us-date-div {
+  width: 100%;
+  height: auto;
+  padding: 60px 50px 100px;
+}
+
+.about-us-flower {
+  width: 25vw;
+}
+
+.about-us-flower.right {
+  transform: rotate(180deg);
+}
+
+.about-us-img {
+  padding: 0px 20vw;
+  width: 100%;
+  height: auto;
+}
+
+.about-us-text {
+  position: relative;
+  padding: 100px 0px;
+}
+
+.about-us-h2,
+.about-us-span {
+  display: flex;
+  justify-content: center;
+  text-align: justify !important;
+}
+
+.about-us-h2,
+.about-us-h4 {
+  font-weight: bold;
+  font-size: 2em;
+  color: #4b8241;
+}
+
+.about-us-h2 {
+  margin-bottom: 40px;
+}
+
+.about-us-span {
+  font-size: 20px;
+  text-align: center !important;
+}
+
+.about-us-span.date {
+  padding: 0 13vw;
+}
+
+.about-us-h4 {
+  padding: 50px 20vw 0px;
+}
+
+.about-us-ul {
+  list-style: none;
+  padding: 0px 20vw;
+}
+
+.about-us-li {
+  width: 100%;
+  height: 60px;
+  border: solid #630164 0.5px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.about-us-span-date {
+  width: 10%;
+  height: 100%;
+  background-color: #630164;
+  color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-us-span-text {
+  width: 90%;
+  margin-left: 10px;
+}
+
+.about-us-second-img {
+  height: 550px;
+  background-image: url("../src/assets/img/IMAGEN_1.3.png");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* ---------- Learning ---------- */
+.learning {
+  width: 100%;
+  height: auto;
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  text-align: justify !important;
+  align-items: center;
+  padding-bottom: 60px;
+}
+
+.learning-div-top,
+.learning-div-videos {
+  width: 100%;
+  height: auto;
+}
+
+.learning-div-top {
+  padding: 50px 20vw;
+}
+
+.learning-div-videos {
+  /* padding: 0px 10vw; */
+  display: flex;
+  align-items: center;
+  /* justify-content: center !important; */
+}
+
+.learning-video {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+
+.learning-h2,
+.learning-span {
+  display: flex;
+  justify-content: center !important;
+  font-family: "Roboto", sans-serif;
+}
+
+.learning-h2 {
+  color: #4b8241;
+  font-weight: bold;
+  font-size: 2em;
+}
+
+.learning-span {
+  color: #4d4d4d;
+  font-size: 20px;
+  text-align: center;
+}
+
 /* ---------- Profiles ---------- */
 .profile-body {
   width: 100%;
@@ -272,15 +329,13 @@
 
 .profile-span {
   color: #4d4d4d;
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 20px;
   text-align: center;
 }
 
 /* ---------- Subscribe ---------- */
 .subscribe {
-  /* display: none; */
-  background-color: #f6f6f6;
+  background-color: #630164;
   bottom: auto;
   width: 100%;
   height: auto;
@@ -299,7 +354,7 @@
   width: 100% !important;
   display: flex;
   justify-content: center;
-  color: #000;
+  color: #f6f6f6;
 }
 
 .subscribe-h2 {
@@ -319,13 +374,13 @@
 .subscribe-h3 {
   font-family: "Roboto", sans-serif;
   margin: 3px 0px;
-  color: #808080;
+  color: #f6f6f6;
 }
 
 .subscribe-btn {
   margin: 10px 0px;
   background-color: #630164;
-  border-color: #630164;
+  border-color: #f6f6f6;
 }
 
 /* ---------- Footer ---------- */
