--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,7 @@
 
 .about-us-ul {
   list-style: none;
+  font-weight: 500;
   padding: 0px 20vw;
 }
 
@@ -207,6 +208,7 @@
 .about-us-span-text {
   width: 90%;
   margin-left: 10px;
+  font-weight: 400;
 }
 
 .about-us-second-img {
@@ -241,16 +243,15 @@
 }
 
 .learning-div-videos {
-  /* padding: 0px 10vw; */
+  padding: 0px 10vw;
   display: flex;
   align-items: center;
-  /* justify-content: center !important; */
+  justify-content: center !important;
 }
 
 .learning-video {
   width: 50%;
   display: flex;
-  justify-content: center;
 }
 
 .learning-h2,
@@ -273,44 +274,58 @@
 }
 
 /* ---------- Profiles ---------- */
-.profile-body {
+.profile {
   width: 100%;
-  height: 530px;
-  display: flex;
-  padding: 25px 200px;
+  height: auto;
 }
 
-.profile-div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: 0px 12px;
-}
-
-.profile-img-div {
-  height: 300px;
-}
-
-.profile-text-div {
-  height: 250px;
-}
-
-.profile-img-x {
+.profile-main {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-}
-
-.profile-h3,
-.profile-span-x {
-  margin-bottom: 0px;
-  padding-top: 5px;
   display: flex;
-  justify-content: center !important;
+  flex-direction: row;
 }
 
-.profile-span-x.roll {
-  text-align: justify !important;
+.profile-center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-img-flower.right {
+  width: 17vw;
+  object-fit: cover;
+  object-position: 10vw 0;
+  height: 500px;
+}
+
+.profile-img-flower.left {
+  margin-top: 12vw;
+  transform: scaleX(-1);
+  object-fit: cover;
+  width: 17vw;
+  object-position: 10vw 0;
+  height: 500px;
+}
+
+.profile-header {
+  height: 30%;
+  width: 100%;
+}
+
+.profile-body {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  margin-top: 50px;
+}
+
+.profile-div-text {
+  width: 100%;
+  height: auto;
+  display: flex;
 }
 
 .profile-span,
@@ -329,13 +344,53 @@
 
 .profile-span {
   color: #4d4d4d;
-  font-size: 20px;
+  font-size: 15px;
+  font-weight: 400;
   text-align: center;
+}
+
+/* --- protagonistas --- */
+.profile-div {
+  width: 100%;
+  margin: 10px;
+}
+
+.profile-img-div {
+  height: 300px;
+}
+
+.profile-text-div {
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-img-photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profile-h3 {
+  padding-top: 10px;
+}
+
+.profile-h3,
+.profile-span-x {
+  margin-bottom: 0px;
+  display: flex;
+  justify-content: center !important;
+}
+
+.profile-span-x.roll {
+  text-align: justify !important;
+  padding-top: 15px;
 }
 
 /* ---------- Subscribe ---------- */
 .subscribe {
-  background-color: #630164;
+  background-color: #1a1a1a;
   bottom: auto;
   width: 100%;
   height: auto;
@@ -379,8 +434,10 @@
 
 .subscribe-btn {
   margin: 10px 0px;
-  background-color: #630164;
-  border-color: #f6f6f6;
+  background-color: #1a1a1a;
+  border-color: #808080;
+  color: 808080;
+  right: -640px; /* TODO: arreglar posicion de botón enviar*/
 }
 
 /* ---------- Footer ---------- */
