--- a/src/App.css
+++ b/src/App.css
@@ -230,28 +230,40 @@
   text-align: justify !important;
   align-items: center;
   padding-bottom: 60px;
+  font-family: "Roboto", sans-serif;
 }
 
-.learning-div-top,
-.learning-div-videos {
+.learning-div-text,
+.learning-div-talk {
   width: 100%;
   height: auto;
 }
 
-.learning-div-top {
+.learning-div-talk {
+  padding: 0px 10vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.learning-div-text {
   padding: 50px 20vw;
 }
 
-.learning-div-videos {
-  padding: 0px 10vw;
+.learning-video-div {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center !important;
 }
 
-.learning-video {
-  width: 50%;
+.learning-talk-title,
+.learning-vimeo-link {
+  width: 100%;
+}
+
+.learning-vimeo-link {
   display: flex;
+  margin-top: 50px;
+  flex-direction: column;
+  align-items: center;
 }
 
 .learning-h2,
@@ -270,7 +282,47 @@
 .learning-span {
   color: #4d4d4d;
   font-size: 20px;
-  text-align: center;
+  text-align: justify;
+}
+
+.learning-span-video {
+  color: #4d4d4d;
+  font-size: 17px;
+  text-align: justify;
+}
+
+.learning-video {
+  width: 50%;
+  display: flex;
+}
+
+.learning-video-text {
+  padding: 6vw 30px 0px;
+}
+
+.learning-video-span {
+  color: #4d4d4d;
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.vimeo-logo {
+  height: 20px;
+  margin-left: 5px;
+}
+
+.learning-btn {
+  margin-top: 20px;
+  width: 180px;
+  background-color: #630164;
+  color: #f6f6f6;
+  display: flex;
+  justify-content: center !important;
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
 /* ---------- Profiles ---------- */
