--- a/src/App.css
+++ b/src/App.css
@@ -226,9 +226,9 @@
   height: auto;
   background-color: #f6f6f6;
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   text-align: justify !important;
-  align-items: center;
+  align-items: center !important;
   padding-bottom: 60px;
   font-family: "Roboto", sans-serif;
 }
@@ -252,6 +252,15 @@
 .learning-video-div {
   width: 100%;
   display: flex;
+}
+
+.learning-div-pdf {
+  width: 100%;
+  padding: 100px 0px 30px;
+}
+
+.learning-div-image {
+  width: 100%;
 }
 
 .learning-talk-title,
@@ -323,6 +332,21 @@
   border-radius: 20px;
   padding: 10px 20px;
   cursor: pointer;
+}
+
+.learning-pdf {
+  margin-top: 40px;
+}
+
+.learning-pdf-a {
+  color: #630164;
+  cursor: pointer;
+  text-decoration: underline;
+  font-size: 15px;
+}
+
+.learning-pdf-author {
+  font-style: italic;
 }
 
 /* ---------- Profiles ---------- */
