--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,18 @@
   height: 100%;
 }
 
+/* ---------- Temporal ---------- */
+
+.temporal-div {
+  width: 100%;
+  height: auto;
+}
+
+.temporal-img {
+  width: 100%;
+  object-fit: contain;
+}
+
 /* ---------- Header ---------- */
 .header {
   width: 100%;
@@ -265,14 +277,6 @@
   display: flex;
 }
 
-.learning-div-pdf {
-  background-color: #f6f6f6;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 60px 30vw 0px;
-}
-
 .learning-div-image {
   background-color: #f6f6f6;
   width: 100%;
@@ -403,8 +407,26 @@
   cursor: pointer;
 }
 
+.learning-div-pdf {
+  background-color: #f6f6f6;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 10vw 0px 12vw;
+}
+
 .learning-pdf {
-  margin-top: 25px;
+  margin: 50px 0px;
+  width: 100%;
+  display: flex;
+}
+
+.learning-pdf-div-icon {
+  width: 50%;
+  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .learning-pdf-a {
@@ -416,6 +438,10 @@
 
 .learning-pdf-author {
   font-style: italic;
+}
+
+.pdf-icon {
+  margin-right: 5px;
 }
 
 /* ---------- Profiles ---------- */
