--- a/src/App.css
+++ b/src/App.css
@@ -436,13 +436,13 @@ li {
   font-family: "Roboto", sans-serif;
 }
 
-.learnin-flower-div {
+/* .learnin-flower-div {
   display: flex;
   justify-content: space-evenly;
-}
+} */
 
 .learning-div-text {
-  width: 80%;
+  width: 100%;
   height: 550px;
   display: flex;
   position: relative;
@@ -478,44 +478,25 @@ li {
 }
 
 .learning-flower.left {
-  object-fit: scale-down;
+  object-fit: cover;
   width: 250px;
-  object-position: -5vw -35px;
-  position: absolute;
-}
-
-.learning-flower.left-2 {
-  transform: rotate(180deg);
-  object-fit: scale-down;
-  width: 180px;
-  position: absolute;
-  object-position: 5vw -29px;
+  object-position: right -66px;
 }
 
 .learning-text {
   width: 100%;
-  position: absolute;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 12% 200px;
+  padding: 12% 70px;
 }
 
 .learning-flower.right {
-  object-fit: contain;
+  object-fit: cover;
   width: 250px;
+  object-position: right -40px;
   transform: rotate(180deg);
-  right: -100px;
-  top: 65%;
-  position: absolute;
-}
-
-.learning-flower.right-2 {
-  object-fit: contain;
-  width: 180px;
-  right: -75px;
-  top: 30%;
-  position: absolute;
 }
 
 .learning-talk-title,
