--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ li {
   height: auto;
   display: flex;
   justify-content: center;
-  background-color: rgb(247, 192, 53);
+  background-color: #ca465e;
   padding: 120px 0px 50px;
   position: relative;
 }
@@ -279,16 +279,15 @@ li {
   width: 100%;
   height: auto;
   display: flex;
-  padding: 50px 10vw;
+  padding: 50px 17vw;
   justify-content: center;
   background-color: #f6f6f6;
 }
 
 .mag-scroll {
-  width: 800px;
+  width: 100%;
   height: 515px;
   background-color: #f6f6f6;
-  overflow: scroll;
   display: flex;
   justify-content: space-between;
 }
@@ -297,23 +296,20 @@ li {
 .mag-scroll-right {
   width: 50%;
   height: 100%;
-  padding: 5px;
 }
 
-.mag-img-cover-div,
-.mag-img-backcover-div {
+.mag-scroll-right {
+  overflow: scroll;
+}
+
+.mag-img-cover-div {
   display: flex;
   width: 390px;
   height: auto;
   box-shadow: 0px 6px 6px #00000028;
 }
 
-.mag-img-backcover-div {
-  margin-top: 10px;
-}
-
-.mag-img-cover,
-.mag-backcover-img {
+.mag-img-cover {
   width: 100%;
   object-fit: contain;
 }
@@ -328,7 +324,6 @@ li {
 
 .mag-ver-div-col.right,
 .mag-ver-div-col.left {
-  /* height: 100%; */
   height: auto;
   width: 50%;
 }
@@ -429,26 +424,30 @@ li {
 
 .mag-scroll-row-backcover {
   width: 100%;
-  margin: 0px 0px 10px;
-  height: 200px;
+  height: auto;
 }
 
 .mag-backcover-col {
   width: 100%;
-  padding: 10px 25px;
-  background-color: #f6f6f6;
+  height: 100%;
+  padding: 10px 5px;
+  margin-bottom: 10px;
   box-shadow: 0px 6px 6px #00000028;
 }
 
-.mag-span {
-  font-size: 12px;
+.mag-backcover-img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.mag-scroll-historicas {
+  display: none;
 }
 
 .mag-main {
   width: 100%;
   height: auto;
 }
-
 /* ---------- Learning ---------- */
 .learning {
   width: 100%;
