--- a/src/App.css
+++ b/src/App.css
@@ -288,8 +288,17 @@ li {
   width: 100%;
   height: 515px;
   background-color: #f6f6f6;
+}
+
+.mag-scroll-row-top {
+  width: 100%;
+  height: 515px;
   display: flex;
   justify-content: space-between;
+}
+
+.mag-scroll-row-top-active {
+  overflow: scroll;
 }
 
 .mag-scroll-left,
@@ -317,7 +326,7 @@ li {
 .mag-scroll-row-vertical {
   width: 100%;
   height: 300px;
-  margin: 0px 0px 5px;
+  margin-bottom: 5px;
   display: flex;
   justify-content: space-between;
 }
@@ -395,7 +404,7 @@ li {
 .mag-scroll-row-horizontal {
   width: 100%;
   height: 200px;
-  margin: 0px 0px 5px;
+  margin-bottom: 15px;
   background-color: #f6f6f6;
   padding: 10px;
   box-shadow: 0px 6px 6px #00000028;
@@ -440,14 +449,27 @@ li {
   object-fit: contain;
 }
 
-.mag-scroll-historicas {
+.mag-scroll-row-bottom {
   display: none;
 }
 
+.mag-h2.historicas {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.historical-section {
+  display: block;
+  width: 100%;
+}
+
 .mag-main {
+  /* display: none; */
   width: 100%;
   height: auto;
 }
+
 /* ---------- Learning ---------- */
 .learning {
   width: 100%;
@@ -888,7 +910,8 @@ li {
 }
 
 .footer-img-falogo {
-  margin-left: 10px;
+  margin: 0 10px;
+  max-width: 200px;
 }
 
 .footer-icon {
