--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -1,10 +1,11 @@
 @import "~antd/dist/antd.css";
 
 /* ---------- Editorial ---------- */
-.editorial {
+.editorial,
+.hablamos {
   width: 100%;
   height: auto;
-  padding: 30px 150px;
+  padding: 30px 135px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
@@ -30,9 +31,11 @@
 .edit-h1 {
   font-family: Open Sans;
   color: #4d4d4d;
+  font-size: 35px;
 }
 
 .edit-h2 {
+  font-size: 20px;
   color: #707070;
   font-family: Open Sans;
   font-weight: bold;
@@ -67,11 +70,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 0px;
 }
 
 .edit-text-span {
   color: #000000;
-  padding: 15px 10px;
+  font-size: 18px;
+  padding: 10px;
   text-align: justify;
   font-family: "Roboto", sans-serif;
 }
@@ -82,16 +87,81 @@
   display: flex;
 }
 
-.edit-text-span-middle {
-  width: 100%;
+.edit-text-span-middle.left {
+  text-align: justify;
+  color: #000000;
+  padding: 0px 10px;
+  font-size: 18px;
 }
 
 .edit-text-span-middle.right {
-  font-family: "Roboto", sans-serif;
+  letter-spacing: -2px;
+  font-family: Open Sans;
   font-style: italic;
-  font-size: 20px;
-  padding: 20px 5px;
+  font-weight: bold;
+  font-size: 40px;
+  padding: 40px 20px 0px;
+  text-indent: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000000;
+  text-align: justify;
+}
+
+/* ---------- Protagonistas ---------- */
+.protagonistas {
+  width: 100%;
+  height: auto;
+  padding: 30px 135px;
+  background-color: #f6f6f6;
+}
+
+.protag-main {
+  width: 100%;
+}
+
+.protag-h3 {
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  font-weight: bold;
+}
+
+.protag-span {
+  font-family: "Roboto", sans-serif;
+  color: #000000;
+  text-align: justify;
+}
+
+/* ---------- Credits ---------- */
+.credits {
+  padding-top: 150px;
+  width: 100%;
+  background-color: #f6f6f6;
+}
+
+.credits-div {
+  width: 100%;
+  border-top: solid #afaeae 1px;
+  padding: 0 50px;
+}
+
+.credits-h2 {
+  color: #707070;
+  font-family: Open Sans;
+  margin: 60px 0px 20px;
+}
+
+.credits-div > ul {
+  list-style: none;
+  padding-left: 0px;
+}
+
+.credits-div > ul > li {
+  margin: 0;
+}
+
+.credits-span {
+  font-family: Open Sans;
+  font-weight: lighter;
 }
