--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -152,7 +152,7 @@
 .protag-div-top {
   width: 100%;
   height: auto;
-  margin: 50px 0px 30px;
+  margin: 50px 0px;
 }
 
 .protag-div-main {
@@ -165,7 +165,7 @@
 .protag-div-bottom {
   width: 100%;
   height: auto;
-  margin: 30px 0px 50px;
+  margin: 50px 0px;
 }
 
 .protag-div-left {
@@ -240,7 +240,7 @@
   font-weight: bold;
   color: #4b8241;
   font-family: "Roboto", sans-serif;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .protag-h2-crisis {
