--- a/src/App.css
+++ b/src/App.css
@@ -290,6 +290,10 @@ li {
   background-color: #f6f6f6;
 }
 
+.mag-scroll-active {
+  height: auto;
+}
+
 .mag-scroll-row-top {
   width: 100%;
   height: 515px;
@@ -465,9 +469,28 @@ li {
 }
 
 .mag-main {
-  /* display: none; */
   width: 100%;
   height: auto;
+}
+
+.mag-hist-col {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.mag-hist-h2 {
+  color: #630164;
+  font-family: Open Sans;
+  font-weight: bold;
+  margin: 50px 0px 20px;
+}
+
+.mag-hist-span {
+  color: #630164;
+  font-family: Open Sans;
+  margin-bottom: 20px;
 }
 
 /* ---------- Learning ---------- */
