--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -111,7 +111,7 @@
 
 /* ---------- Credits ---------- */
 .credits {
-  padding-top: 150px;
+  padding-top: 100px;
   width: 100%;
   background-color: #f6f6f6;
 }
@@ -515,4 +515,42 @@
   width: 100%;
   height: auto;
   object-fit: contain;
+}
+
+/* ---------- ReadNext ---------- */
+.read-next {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.read-next-div {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0px;
+}
+
+.read-next-div.previous {
+  text-align: end;
+  padding-right: 100px;
+}
+
+.read-next-div.next {
+  text-align: start;
+  padding-left: 100px;
+}
+
+.read-next-span {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  color: #000000;
+}
+
+.read-next-span-icon {
+  color: #630164;
+  font-size: 60px;
+  cursor: pointer;
 }
