--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,11 @@ li {
 }
 
 /* ---------- About Us ---------- */
+.about-us-container {
+  width: 100%;
+  height: auto;
+}
+
 .about-us {
   width: 100%;
   height: auto;
@@ -152,8 +157,10 @@ li {
 }
 
 .about-us-first-img {
+  object-fit: contain;
+  width: 100%;
   height: 650px;
-  background-image: url("../src/assets/img/IMAGEN_1.1.png");
+  background-image: url("https://github.com/puliv/AhoraNosotras/blob/master/src/assets/img/IMAGEN_1.1.png?raw=true");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -268,7 +275,7 @@ li {
 
 .about-us-second-img {
   height: 550px;
-  background-image: url("../src/assets/img/IMAGEN_1.3.png");
+  background-image: url("https://github.com/puliv/AhoraNosotras/blob/master/src/assets/img/IMAGEN_1.3.png?raw=true");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
